Refactors the Authentication and ValidationErrorResponse DTO