@@ -1,5 +1,6 @@
 package com.foodista.advice;
 
+import com.foodista.dto.ValidationErrorResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
@@ -17,7 +18,7 @@ public class GlobalExceptionHandler {
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity handleValidationExceptions(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ValidationErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
         List<String> errors = ex.getBindingResult()
                 .getAllErrors().stream()
                 .filter(error -> error instanceof FieldError)
@@ -25,9 +26,9 @@ public class GlobalExceptionHandler {
                     FieldError fieldError = (FieldError) error;
                     return fieldError.getField() + ": " + fieldError.getDefaultMessage();
                 })
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseEntity.badRequest().body(errors);
+        return ResponseEntity.badRequest().body(ValidationErrorResponse.builder().status(HttpStatus.BAD_REQUEST.name()).message(String.join("\n", errors)).metaErrorInfo(errors).build());
     }
 
 }
